--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,3 +13,13 @@ body {
     background: var(--gray-900);
     color: var(--text-default);
 }
+/* .container-fluid{
+    background-color: purple;
+} */
+.container{
+    max-width: 98rem;
+    margin: 0 auto;
+}
+.content{
+    margin: 3.2rem;
+}
