--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,13 +13,27 @@ body {
     background: var(--gray-900);
     color: var(--text-default);
 }
-/* .container-fluid{
-    background-color: purple;
-} */
 .container{
     max-width: 98rem;
     margin: 0 auto;
 }
 .content{
     margin: 3.2rem;
+}
+.form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2.4rem;
+}
+.formRow{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2.4rem;
+}
+::selection{
+    background-color: var(--primary-dark);
 }
